--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,12 @@
         "jms/di-extra-bundle": "*"
     },
     "autoload": {
-        "psr-4": { "JMS\\TranslationBundle": "" }
+        "psr-0": { "JMS\\TranslationBundle": "" }
     },
+    "target-dir": "JMS/TranslationBundle",
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.1-dev"
+        }
     }
 }
