--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "stable",
     "require": {
         "symfony/framework-bundle": "~2.6",
-        "nikic/php-parser": "~1.4.1",
+        "nikic/php-parser": "0.9.*",
         "symfony/console": "*"
     },
     "conflict": {
